--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import "tailwindcss"; 
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *)); 
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
